manifests/apps/external-service/base/chaos-monitor-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-monitor-grafana
spec:
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: chaos-monitor-grafana-slice
  labels:
    kubernetes.io/service-name: chaos-monitor-grafana
addressType: IPv4
ports:
- port: 3000
  protocol: TCP
endpoints:
- addresses:
  - 10.20.1.250
  conditions: {}
