manifests/apps/external-service/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: postgres-slice
  labels:
    kubernetes.io/service-name: postgres
addressType: IPv4
ports:
- port: 5432
  protocol: TCP
endpoints:
- addresses:
  - 10.20.1.40
  conditions: {}
